# ceres_analytical

./: CMakeLists.txt  README.md
include/ceres_analytical/: ba_problem.h  custom_local_parametrization.h  custom_pose_parametrization.h  error_analytical.h  mp_error_analytical.h  projection_analytical_error.h  reprojection_error_without_intrinsics.h  snavely_reprojection_error.h
scripts/: derivatives.py  derivatives_quat.py  derivatives_quat_results.txt  derivatives_results.txt  derivatives_results_coded.txt
src/: ba_problem.cpp  bal_problem.cpp  custom_local_parametrization.cpp  custom_pose_parametrization.cpp  mp_opt.cpp  opt.cpp
